<resources>
    <string name="app_name">Foody</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titleLogin">Đăng Nhập hoặc Đăng Ký</string>
    <string name="btnGG">Đăng nhập với Google</string>
    <string name="btnFB">Đăng nhập với Facebook</string>
    <string name="textOr">Hoặc đăng nhập bằng tài khoản của bạn</string>
    <string name="hintEmail">Địa chỉ email của bạn</string>
    <string name="hintPass">Mật khẩu của bạn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnDangNhap">Đăng Nhập</string>
</resources>