<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_background"
    android:layout_height="match_parent"
>

    <TextView
        android:id="@+id/textSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/titleLogin"
        android:textColor="#546E7A"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnGG"
        android:textSize="20sp"
        android:id="@+id/btnGoogle"
        app:backgroundTint="@null"
        android:background="#c00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSignin" />
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btnFB"
        android:textSize="20sp"
        android:id="@+id/btnFacebook"
        app:backgroundTint="@null"
        android:background="#4267B2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle" />

    <TextView
        android:id="@+id/textHoac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/textOr"
        android:textAlignment="center"
        android:textColor="#80D8FF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFacebook" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#0D47A1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHoac"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#283593"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDangNhap"
        app:backgroundTint="@null"
        android:background="@color/white"
        android:textColor="@color/black"
        android:id="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/editTextPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>